Add cover_art and comments.

--- a/views/albumlist.jade
+++ b/views/albumlist.jade
@@ -9,6 +9,7 @@ block content
           tr
             th No
             th
+            th
             th Artist
             th Album
             th Genre
@@ -19,6 +20,8 @@ block content
               td
                 button.btn.btn-default.btn-xs
                   span.glyphicon.glyphicon-eye-open
+              td
+                img(src=album.cover_art, alt=album.Title, style='width:200px;height:200px;')
               td= album.Artist
               td= album.Title
               td= album.Genre
@@ -36,6 +39,52 @@ block content
                         td= album.DateRecommended
                         td= album.RecommendedBy
                         td= album.TopTracks
+                    thead
+                      tr
+                        th Comment
+                    tbody
+                      tr
+                        td(colspan='3')= album.Amazon
+                        
+//        <tr>
+//            <td colspan="12" class="hiddenRow">
+//            <div class="accordian-body collapse" id="demo1"> 
+//            
+//              <table class="table table-striped">
+//                      <thead>
+//                        <tr>
+//                            <td><a href="WorkloadURL">Workload link</a></td>
+//                            <td>Bandwidth: Dandwidth Details</td>
+//                            <td>OBS Endpoint: end point</td></tr>
+//                        <tr>
+//                            <th>Access Key</th>
+//                            <th>Secret Key</th>
+//                            <th>Status </th>
+//                            <th> Created</th>
+//                            <th> Expires</th>
+//                            <th>Actions</th></tr>
+//                      </thead>
+//                      <tbody>
+//                            <tr>
+//                              <td>access-key-1</td>
+//                              <td>secretKey-1</td>
+//                              <td>Status</td>
+//                              <td>some date</td>
+//                              <td>some date</td>
+//                              <td><a href="#" class="btn btn-default btn-sm">
+//                                  <i class="glyphicon glyphicon-cog"></i>
+//                                  </a>
+//                               </td>
+//                             </tr>
+//                      </tbody>
+//               	</table>
+//              
+//              </div>
+//              </td>
+//        </tr>   
+               
+                        
+                        
 
 //    .col-lg-6
 //      .panel.panel-default
