Fix nested “each” issue.

--- a/views/albumlist.jade
+++ b/views/albumlist.jade
@@ -46,7 +46,7 @@ block content
                       tbody
                         each comment in album.Amazon
                           tr
-                            td(colspan='3')= album.Amazon
+                            td(colspan='3')= comment
                         
 //        <tr>
 //            <td colspan="12" class="hiddenRow">
