--- a/views/albumlist.jade
+++ b/views/albumlist.jade
@@ -5,34 +5,41 @@ block content
     .container
       h1 Albums of the Day
       table.table.table-striped(style='border-collapse:collapse;')
-        tbody
+        if albumlist
           each album, i in albumlist
             tr.accordion-toggle(data-toggle='collapse', data-target='#demo#{i}')
               td
-                img(src=album.cover_art, alt=album.Title, style='width:250px;height:250px;')
+                img(src=album.cover_art, alt=album.Title, style='width:175px;height:175px;')
               td
                h3= album.Title
                p
                h4= album.Artist
                p
+               h5= album.Genre
+               p
                button.btn.btn-default.btn-xs
                  span.glyphicon.glyphicon-eye-open
-              td= album.Genre
             tr
               td.hiddenRow(colspan='12')
                 .accordian-body.collapse(id='demo#{i}')
                   table.table.table-striped
                     thead
                       tr
-                        th(style='width:100px') Date
-                        th(style='width:150px') Recommended By
-                        th Top Tracks
+                        th(style='width:150px') Date
+                        th(style='width:250px') Recommended By
+                        if album.TopTracks
+                          th Top Tracks
+                        else
+                          th
                     tbody
                       tr
                         td= album.DateRecommended
                         td= album.RecommendedBy
-                        td= album.TopTracks
-                    if (album.Amazon !== undefined)
+                        td
+                          if album.TopTracks
+                            each t in album.TopTracks
+                              p= t[0]
+                    if album.Amazon
                       thead
                         tr
                           th Comments
@@ -40,7 +47,10 @@ block content
                         each comment in album.Amazon
                           tr
                             td(colspan='3')= comment
-                        
+
+// th(style='width:100px') Date
+// th(style='width:150px') Recommended By
+                                     
 //        <tr>
 //            <td colspan="12" class="hiddenRow">
 //            <div class="accordian-body collapse" id="demo1"> 
