--- a/views/newalbum.jade
+++ b/views/newalbum.jade
@@ -1,13 +1,2 @@
-extends layout
-
-block content
-  .jumbotron
-    .container
-      h1= title
-
-      form#formAddAlbum(name="addalbum",method="post",action="/addalbum")
-        input#inputDateRecommended(type="date", placeholder="DateRecommended", name="DateRecommended")
-        input#inputRecommendedBy(type="text", placeholder="RecommendedBy", name="RecommendedBy")
-        input#inputArtist(type="text", placeholder="Artist", name="Artist")
-        input#inputAlbum(type="text", placeholder="Album", name="Album")
-        button#btnSubmit(type="submit") submit
+<iframe id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="900" height="700"> </iframe>
+<script type="text/javascript"> document.getElementById("forum_embed").src = "https://groups.google.com/forum/embed/?place=forum/great-listens" + "&showsearch=true&showpopout=true&parenturl=" + encodeURIComponent(window.location.href);</script>
