--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,17 +1,30 @@
 doctype html
 html(lang="en")
   head
+    //////////////////////////////////////////////////////////////////////////////////////////////
+    // The following 3 meta tags *must* come first in the head;
+    // any other head content must come *after* these tags
+
     meta(charset='utf-8')
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
+
+    //////////////////////////////////////////////////////////////////////////////////////////////
+
     title= title
 
+    //////////////////////////////////////////////////////////////////////////////////////////////
     // Bootstrap core CSS
+
     link(href="css/bootstrap.min.css" rel="stylesheet")
     link(href="css/starter-template.css" rel="stylesheet")
+    
+    //////////////////////////////////////////////////////////////////////////////////////////////
 
   body
+    //////////////////////////////////////////////////////////////////////////////////////////////
+    // Navbar
+
     nav.navbar.navbar-inverse.navbar-fixed-top
       div.container
         div.navbar-header
@@ -27,11 +40,18 @@ html(lang="en")
             li.active: a(href="/") Home
             li: a(href="/albumlist") List Albums
             li: a(href="/newalbum") New Album
-
+            
+    //////////////////////////////////////////////////////////////////////////////////////////////
     // jQuery (necessary for Bootstrap's JavaScript plugins)
+
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+
+    //////////////////////////////////////////////////////////////////////////////////////////////    
     // Include all compiled plugins (below), or include individual files as needed
+
     script(src="js/bootstrap.min.js")
+    
+    //////////////////////////////////////////////////////////////////////////////////////////////
 
     block content
  
