--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,7 @@ doctype html
 html(lang="en")
   head
     //////////////////////////////////////////////////////////////////////////////////////////////
-    // The following 3 meta tags *must* come first in the head;
-    // any other head content must come *after* these tags
+    // These 3 meta tags MUST come first in the head; any other head content must come AFTER
 
     meta(charset='utf-8')
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
@@ -33,6 +32,7 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
             span.icon-bar
+            span.icon-bar
           a.navbar-brand(href="/") Album of the Day
 
         #navbar.collapse.navbar-collapse
@@ -40,6 +40,7 @@ html(lang="en")
             li.active: a(href="/") Home
             li: a(href="/albumlist") List Albums
             li: a(href="/newalbum") New Album
+            li: a(href="/battle") Battle
             
     //////////////////////////////////////////////////////////////////////////////////////////////
     // jQuery (necessary for Bootstrap's JavaScript plugins)
